# rag

./: .gitignore  main.py  pyproject.toml  requirements.txt
notebook/: doc.ipynb  pdf_loader.ipynb
notebook/pdfDocs/: chroma.sqlite3
pdf_collection/: chroma.sqlite3
src/: dataLoader.py  embedding.py  llmResult.py  search.py  vectorStore.py
